# logwrap

./: .gitignore  LICENSE  README.md  logwrap.c  makefile
.github/workflows/: build-test.yml
test/: CMakeLists.txt  coverage  makefile  run_test.c  run_tests  test_advanced.c  test_advanced_newline.c  test_cmd.c  test_end_write.c  test_long.c  test_lot_data.c  test_process_spam.c  test_quit.c  test_server.c  test_short_spam.c  test_signal.c  test_simple.c  test_timed.c  test_timed_detach.c  test_usage.c
test/utils/: append.c  cmd.c  exit.c  server.c  test_advanced.c  test_timed.c  utils.c  utils.h
